--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div class="head">
+        <h1>Calculator</h1>
+    </div>
+    <form>
+    <div class="box">
+        <label for="in">Enter number:</label>
+        <input type="number">
+        <span class="func">x</span>
+        <input type="number">
+    </div>
+    <div class="calc">
+        <button class="btn">x</button>
+        <button class="btn">/</button>
+        <button class="btn">+</button>
+        <button class="btn">-</button>
+        <button class="btn">=</button>
+    </div>
+    <div class="output">
+        <label for="out">Result :</label>
+        <output class="out"></output>
+    </div>
+    </form>
   
     <script src="main.js"></script>
 </body>
