--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="number" id="input2">
     </div>
     <div class="calc">
-        <button class="btn" id="x">x</button>
+        <button class="btn" id="*">*</button>
         <button class="btn" id="/">/</button>
         <button class="btn" id="+">+</button>
         <button class="btn" id="-">-</button>
